--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "instant-survey",
   "version": "0.1.0",
+  "homepage": "https://bluewings.github.io/instant-survey/",
   "private": true,
   "dependencies": {
+    "@types/qrcode.react": "^1.0.1",
     "antd": "^4.15.0",
     "bootstrap": "^4.6.0",
     "firebase": "^8.3.1",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.2.1",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
@@ -30,7 +33,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
